--- a/src/PgpSharp/PgpSharp.csproj
+++ b/src/PgpSharp/PgpSharp.csproj
@@ -1,31 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net40</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net40;netcoreapp3.0</TargetFrameworks>
     <Company>Yin-Chun Wang</Company>
-    <Copyright>Copyright © Yin-Chun Wang 2014</Copyright>
+    <Copyright>Copyright © Yin-Chun Wang 2020</Copyright>
     <Description>Defines basic pgp operations for dotnet with a sample implementation using GnuPG command line.</Description>
     <PackageProjectUrl>https://github.com/soukoku/pgpsharp</PackageProjectUrl>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/soukoku/pgpsharp/master/LICENSE.txt</PackageLicenseUrl>
     <PackageTags>pgp openpgp gpg</PackageTags>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>Sign.snk</AssemblyOriginatorKeyFile>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
+    <!--<SignAssembly>true</SignAssembly>-->
+    <!--<AssemblyOriginatorKeyFile>Sign.snk</AssemblyOriginatorKeyFile>-->
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)'=='net40'">
-    <DocumentationFile>bin\Debug\net40\PgpSharp.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
-    <DocumentationFile>bin\Debug\netstandard2.0\PgpSharp.xml</DocumentationFile>
-  </PropertyGroup>
-  
   <ItemGroup Condition="'$(TargetFramework)' == 'net40'">
     <Reference Include="System.Configuration"></Reference>
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+  <ItemGroup Condition="'$(TargetFramework)' != 'net40'">
     <PackageReference Include="System.Configuration.ConfigurationManager">
-      <Version>4.4.0</Version>
+      <Version>4.7.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
